[gd_scene load_steps=11 format=3 uid="uid://cjoqkoa2ybm70"]

[ext_resource type="Texture2D" uid="uid://y4yxcv10u3qs" path="res://Parasite/ParasiteReference.png" id="1_476a4"]
[ext_resource type="Script" path="res://Parasite/parasite.gd" id="1_rejf0"]
[ext_resource type="Texture2D" uid="uid://b0r50ht33uxk4" path="res://Parasite/parasiteGround.png" id="2_plx1b"]

[sub_resource type="CircleShape2D" id="CircleShape2D_7g7m8"]
radius = 7.0

[sub_resource type="GDScript" id="GDScript_otfiw"]
resource_name = "groundState"
script/source = "extends Node
@onready var p:Parasite = $\"../..\"

func start():
	p.spri.texture=p.PARASITE_GROUND
	p.attaching=true
	p.camera.target=p
	pass
	
func update(delta:float):
	p.lookingDirection=-p.get_local_mouse_position().angle_to(Vector2(1,0))
	p.spriDebug.rotation=p.lookingDirection #debug
	
	if(Input.is_action_just_pressed(\"jump\")):
		var mouseDistance=p.get_local_mouse_position().length()
		if(mouseDistance>p.maxMousePos):
			p.velocity=Vector2.from_angle(p.lookingDirection) * p.maxSpeed
		elif(mouseDistance>p.minMousePos):
			p.velocity=Vector2.from_angle(p.lookingDirection) * p.maxSpeed * mouseDistance/p.maxMousePos
		else:
			print(\"clickTooClose\")
			pass #too short to jump
			
	#frictions
	if(p.is_on_wall()):
		p.velocity=p.velocity.move_toward(Vector2.ZERO,p.dec*delta*2)
		#print(\"touching Wall\")
	else:
		p.velocity=p.velocity.move_toward(Vector2.ZERO,p.dec*delta)
	
	
	
	pass
	
func stop():
	p.attaching=false
	pass
"

[sub_resource type="GDScript" id="GDScript_yvcmv"]
resource_name = "attachedState"
script/source = "extends Node
@onready var p:Parasite = $\"../..\"

func start(body:CharacterBody2D):
	p.spri.texture=p.PARASITE_ATTACHED
	p.velocity=Vector2.ZERO
	p.controlledBody=body
	p.camera.target=body
	p.set_collision_layer_value(1,false)
	p.set_collision_mask_value(1,false)
	pass
	
var mousePos:Vector2
func update(delta:float):
	
	
	
	var mousePos=-Vector2.from_angle(p.controlledBody.lookingDirection).normalized()*p.orbitSize
	p.global_position=p.controlledBody.rotation_point.global_position + mousePos
	p.lookingDirection=p.global_position.angle_to_point(p.controlledBody.rotation_point.global_position)
	p.spriDebug.rotation=p.lookingDirection #debug
	p.spri.rotation=p.lookingDirection
	if(p.lookingDirection>0.):
		p.z_index=10
	else:
		p.z_index=11
	
	if(Input.is_action_just_pressed(\"jump\")):
		p.velocity=-Vector2.from_angle(p.lookingDirection) * p.maxSpeed
	pass
	
func stop():
	p.z_index=10
	p.controlledBody.detached()
	p.ignoreBody=p.controlledBody
	p.clearIgnoreBodyTimer.start()
	p.controlledBody=null
	p.camera.target=p
	p.set_collision_layer_value(1,true)
	p.set_collision_mask_value(1,true)
	pass
"

[sub_resource type="GDScript" id="GDScript_n3r1t"]
resource_name = "hitbox"
script/source = "extends Area2D

func getHit(damage:float):
	pass"

[sub_resource type="CircleShape2D" id="CircleShape2D_2l68w"]
radius = 16.0

[sub_resource type="CircleShape2D" id="CircleShape2D_5pfyc"]
radius = 27.0185

[sub_resource type="CircleShape2D" id="CircleShape2D_0hstl"]
radius = 500.0

[node name="Parasite" type="CharacterBody2D"]
z_index = 10
motion_mode = 1
script = ExtResource("1_rejf0")
orbitSize = 22
maxMousePos = 120.0
minMousePos = 20.0

[node name="FeetCollision" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_7g7m8")

[node name="Sprite" type="Sprite2D" parent="."]
texture = ExtResource("2_plx1b")

[node name="SpriteDebug" type="Sprite2D" parent="."]
visible = false
self_modulate = Color(0, 0.776471, 0.180392, 1)
texture = ExtResource("1_476a4")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="States" type="Node" parent="."]

[node name="Ground" type="Node" parent="States"]
script = SubResource("GDScript_otfiw")

[node name="Attached" type="Node" parent="States"]
script = SubResource("GDScript_yvcmv")

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 0
monitoring = false
script = SubResource("GDScript_n3r1t")

[node name="Body" type="CollisionShape2D" parent="HitBox"]
visible = false
shape = SubResource("CircleShape2D_2l68w")

[node name="AttachRange" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4
monitorable = false

[node name="collider" type="CollisionShape2D" parent="AttachRange"]
shape = SubResource("CircleShape2D_5pfyc")

[node name="AgroRange" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4
monitorable = false

[node name="collider" type="CollisionShape2D" parent="AgroRange"]
shape = SubResource("CircleShape2D_0hstl")

[node name="Health" type="Node2D" parent="."]

[node name="clearIgnoreBody" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[connection signal="area_entered" from="AttachRange" to="." method="attach_to"]
[connection signal="timeout" from="clearIgnoreBody" to="." method="clearIgnoreBody"]
